--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: on_muhasebe_ypy
-description: Ön Muhasebe Proje
+name: on_muhasebe
+description: görkem gök ve engin çağlar proje yönetimi dersi final proje
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -25,13 +25,37 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Flutter İcon  Kütüphanesi
   cupertino_icons: ^1.0.2
+  # Hizmet Yönetimi
+  get_it: ^7.1.3
+  # Durum Yönetimi
+  flutter_bloc: ^7.0.1
+  # Değişken Yönetimi
+  equatable: ^2.0.3
+  # Foksiyonel Programlama
+  dartz: ^0.9.2
+  # Uzak API Kullanımı
+  data_connection_checker: ^0.3.4
+  http: ^0.13.3
+  # Yerel Önbellek Kullanımı
+  shared_preferences: ^2.0.6
+  # API Yönetimi
+  chopper: ^4.0.1
+  # Ekranlar Arası Geçiş
+  splashscreen: ^1.3.5
+  # Json Interpreter sürümü 
+  json_annotation: ^3.0.1
+  # Gerekli Komponentler
+  searchfield: ^0.5.2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.5.1
+  build_runner: ^1.11.5
+  mockito: ^4.1.1+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,7 +69,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/fonts/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
